--- a/picom.conf
+++ b/picom.conf
@@ -1,88 +1,14 @@
-esta config de picom, #################################
-#             Shadows           #
-#################################
-
-# Enabled client-side shadows on windows. Note desktop windows
-# (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
-# unless explicitly requested using the wintypes option.
 shadow = false;
 shadow-radius = 1;
 shadow-offset-x = 0;
 shadow-offset-y = 0;
 shadow-color = "#000000";
 
-# Crop shadow of a window fully on a particular monitor to that monitor. This is
-# currently implemented using the X RandR extension.
-# Default: false
-# crop-shadow-to-monitor = false
-
-#################################
-#           Fading              #
-#################################
-
-# Fade windows in/out when opening/closing and when opacity changes,
-# unless no-fading-openclose is used. Can be set per-window using rules.
-fading = true;
+fading = false;
 fade-in-step = 0.06;
 fade-out-step = 0.06;
 no-fading-openclose = false
 no-fading-destroyed-argb = false
-
-#################################
-#   Transparency / Opacity      #
-#################################
-# Opacity of window titlebars and borders.
-# Range: 0.1 - 1.0
-# Default: 1.0 (disabled)
-# frame-opacity = 0.7;
-
-# Use fixed inactive dim value, instead of adjusting according to window opacity.
-# Default: false
-# inactive-dim-fixed = true
-
-#################################
-#           Corners             #
-#################################
-
-# Sets the radius of rounded window corners. When > 0, the compositor will
-# round the corners of windows. Does not interact well with
-# `transparent-clipping`.
-# Default: 0 (disabled)
-
-#################################
-#            Blur               #
-#################################
-# Parameters for background blurring, see BLUR section in the man page for more information.
-# blur-size = 3
-# blur-deviation = false
-# blur-strength = 8
-
-# Blur background of semi-transparent / ARGB windows.
-# Can be set per-window using rules.
-# Default: false
-# blur-background = false
-
-# Blur background of windows when the window frame is not opaque.
-# Implies:
-#    blur-background
-# Default: false
-# blur-background-frame = false
-
-# Use fixed blur strength rather than adjusting according to window opacity.
-# Default: false
-# blur-background-fixed = false
-
-# Specify the blur convolution kernel, with the following format:
-# example:
-# blur-method = "kernel";
-# blur-kern = "15,15,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,";
-# Can also be a pre-defined kernel, see the man page.
-# Default: ""
-# blur-kern = "3x3box";
-
-#################################
-#       General Settings        #
-#################################
 
 backend = "glx"
 dithered-present = false;
@@ -92,51 +18,5 @@ detect-rounded-corners = true;
 corner-radius = 10;
 rounded-corner = 10;
 
-# detect-client-opacity = true;
-# use-ewmh-active-win = false
-# unredir-if-possible = false
-# unredir-if-possible-delay = 0
-
 detect-transient = true;
 use-damage = true;
-
-# xrender-sync-fence = false
-# force-win-blend = false
-# no-ewmh-fullscreen = false
-# max-brightness = 1.0
-# transparent-clipping = false
-
-rules: ({
-  match = "window_type = 'tooltip'";
-  fade = false;
-  shadow = false;
-  opacity = 0.75;
-  full-shadow = false;
-}, {
-  match = "window_type = 'dock'    || "
-          "window_type = 'desktop' || "
-          "_GTK_FRAME_EXTENTS@";
-  blur-background = false;
-}, {
-  match = "window_type != 'dock'";
-  # shader = "my_shader.frag";
-}, {
-  match = "window_type = 'dock' || "
-          "window_type = 'desktop'";
-  corner-radius = 0;
-  rounded-corner = 0;
-}, {
-  match = "name = 'Notification'   || "
-          "class_g = 'Conky'       || "
-          "class_g ?= 'Notify-osd' || "
-          "class_g = 'Cairo-clock' || "
-          "_GTK_FRAME_EXTENTS@";
-  shadow = false;
-})
-
-# `@include` directive can be used to include additional configuration files.
-# Relative paths are search either in the parent of this configuration file
-# (when the configuration is loaded through a symlink, the symlink will be
-# resolved first). Or in `$XDG_CONFIG_HOME/picom/include`.
-#
-# @include "extra.conf" quiero que todas las ventanas tengan border radius de 10 y el borde sea de 1px color negro
