--- a/kitty.conf
+++ b/kitty.conf
@@ -11,20 +11,20 @@ tab_bar_style powerline
 
 # Tabs
 active_tab_background   #fcee0b
-active_tab_foreground   #303030
+active_tab_foreground   #111213
 active_tab_font_style     Bold
-inactive_tab_background #303030
-inactive_tab_foreground #6e6e6e
+inactive_tab_background #111213
+inactive_tab_foreground #050506
 inactive_tab_font_style   Bold
-tab_bar_background      #111213
+tab_bar_background      #050506
 
 # General Colors
 url_color             #7dcfff
-background            #111213
-foreground            #8e8e8f
+background            #050506
+foreground            #5A5A67
 cursor                #fcee0b
-selection_background  #111213
-selection_foreground  #fcee0b
+selection_background  #050506
+selection_foreground  #a0c1b8
 color0                #1b1d1e
 color8                #505354
 color1                #e6db43
@@ -33,10 +33,10 @@ color2                #c8be46
 color10               #fff27c
 color3                #f3fd21
 color11               #feed6c
-color4                #fcee0b 
+color4                #fcee0b
 color12               #fcee0b
 color5                #c3a6c7
-color13               #d0b5d7 
+color13               #d0b5d7
 color6                #a0c1b8
 color14               #b5d2c9
 color7                #f7d9c4
