--- a/kitty.conf
+++ b/kitty.conf
@@ -25,21 +25,22 @@ foreground            #5A5A67
 cursor                #fcee0b
 selection_background  #050506
 selection_foreground  #a0c1b8
-color0                #1b1d1e
-color8                #505354
-color1                #e6db43
-color9                #fff68d
-color2                #c8be46
-color10               #fff27c
-color3                #f3fd21
-color11               #feed6c
-color4                #fcee0b
-color12               #fcee0b
-color5                #c3a6c7
-color13               #d0b5d7
-color6                #a0c1b8
-color14               #b5d2c9
-color7                #f7d9c4
-color15               #fff0e1
+
+color0 #fcee0b
+color8 #fcee0b
+color1 #cd5c5c
+color9 #cc5533
+color2 #86af80
+color10 #88aa22
+color3 #e8ae5b
+color11 #ffa75d
+color4 #fcee0b
+color12 #c2c372
+color5 #deb887
+color13 #996600
+color6 #72c2c3
+color14 #aadadb
+color7 #bbaa99
+color15 #ddccbb
 
 background_opacity 1
